--- a/test.html
+++ b/test.html
@@ -1,24 +1,24 @@
 <div>
 <img src="example_images/01540_driftwood_1366x768.jpg" width="200"><br>
-<div style="background-color:rgb(139,151,181);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(102,100,111);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(145,81,48);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(208,204,206);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(237,195,127);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(137,155,193);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(227,206,174);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(100,97,108);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(133,68,35);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(182,129,96);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <br><br><br>
 <img src="example_images/04103_misslibertyii_1920x1080.jpg" width="200"><br>
-<div style="background-color:rgb(181,207,213);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(128,166,188);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(69,124,156);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(17,62,88);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(12,99,50);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(181,208,213);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(132,169,190);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(86,137,166);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(35,99,126);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(8,57,38);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <br><br><br>
 <img src="example_images/14775211410_42b8d244da_o.jpg" width="200"><br>
 <div style="background-color:rgb(245,198,161);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(43,45,56);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(95,90,100);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(155,131,145);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(232,163,128);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(42,43,54);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(88,85,95);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(147,127,141);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(226,159,130);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <br><br><br>
 <img src="example_images/Fotolia_45549559_320_480.jpg" width="200"><br>
 <div style="background-color:rgb(235,236,238);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
@@ -35,10 +35,17 @@
 <div style="background-color:rgb(128,126,93);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <br><br><br>
 <img src="example_images/mac_os_x_retina_zebras-wallpaper-1920x1080.jpg" width="200"><br>
-<div style="background-color:rgb(94,150,31);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(30,69,20);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(129,159,112);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(180,200,204);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(68,89,86);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(76,119,53);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(29,65,24);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(122,176,39);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(174,194,204);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(134,161,125);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<br><br><br>
+<img src="example_images/windows_xp_bliss-wide.jpg" width="200"><br>
+<div style="background-color:rgb(51,82,8);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(144,194,254);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(63,144,253);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(114,158,27);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(229,244,254);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <br><br><br>
 </div>
