Add SSE for cluster count detection

--- a/test.html
+++ b/test.html
@@ -1,51 +1,75 @@
 <div>
 <img src="example_images/01540_driftwood_1366x768.jpg" width="200"><br>
-<div style="background-color:rgb(138,157,197);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(101,98,110);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(229,207,171);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(133,68,36);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(179,129,98);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(152,147,155);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(99,97,110);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(233,208,167);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(132,168,230);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(180,113,74);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(120,61,34);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <br><br><br>
 <img src="example_images/04103_misslibertyii_1920x1080.jpg" width="200"><br>
-<div style="background-color:rgb(182,209,214);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(135,171,191);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(86,137,167);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(33,98,124);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(8,56,35);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(179,205,212);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(155,187,201);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(127,165,188);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(92,141,171);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(43,106,134);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(202,224,223);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(9,62,51);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <br><br><br>
 <img src="example_images/14775211410_42b8d244da_o.jpg" width="200"><br>
-<div style="background-color:rgb(245,199,162);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(41,43,54);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(88,84,95);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(148,127,141);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(228,162,132);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(246,207,168);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(72,71,83);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(36,38,48);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(239,175,140);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(113,105,112);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(147,134,153);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(190,132,133);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <br><br><br>
 <img src="example_images/Fotolia_45549559_320_480.jpg" width="200"><br>
-<div style="background-color:rgb(235,236,239);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(50,47,7);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(113,143,20);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(215,177,106);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(208,41,16);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(237,240,248);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(66,76,13);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(102,137,14);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(29,24,2);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(224,49,18);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(231,217,179);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(231,155,68);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(149,175,40);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(196,185,155);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(150,16,7);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <br><br><br>
 <img src="example_images/giant-panda-shutterstock_86500690.jpg" width="200"><br>
-<div style="background-color:rgb(50,92,20);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(93,154,30);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(19,22,14);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(224,217,190);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(136,137,98);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(39,67,17);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(104,145,49);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(180,175,140);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(243,235,212);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <br><br><br>
 <img src="example_images/mac_os_x_retina_zebras-wallpaper-1920x1080.jpg" width="200"><br>
-<div style="background-color:rgb(73,117,47);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(29,65,23);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(121,175,39);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(125,151,133);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(184,203,208);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(68,113,45);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(122,171,51);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(25,57,24);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(155,177,178);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <br><br><br>
 <img src="example_images/windows_xp_bliss-wide.jpg" width="200"><br>
-<div style="background-color:rgb(53,85,9);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(64,144,253);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(144,194,254);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(121,167,28);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(229,244,254);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(55,87,9);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(63,143,253);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(136,189,254);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(124,170,29);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(192,224,254);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(247,253,254);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<br><br><br>
+<img src="example_images/Bez nazwy.jpg" width="200"><br>
+<div style="background-color:rgb(0,0,0);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<br><br><br>
+<img src="example_images/british-flag-medium.jpg" width="200"><br>
+<div style="background-color:rgb(207,20,43);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(254,254,254);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(0,35,124);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(220,197,214);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(250,235,238);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(69,94,157);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(11,35,92);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(230,91,109);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(149,48,59);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(163,113,117);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <br><br><br>
 </div>
