--- a/test.html
+++ b/test.html
@@ -1,58 +1,99 @@
 <img src="example_images/01540_driftwood_1366x768.jpg" width="200"><br>
-<div style="background-color:rgb(124,121,131);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(223,202,170);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(110,67,50);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(131,164,223);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(186,118,76);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(158,149,154);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(118,111,120);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(128,164,228);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(224,211,195);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(148,75,38);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(240,196,123);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(74,78,93);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(184,111,69);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(73,37,23);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<br><br><br>
+<img src="example_images/02.jpg" width="200"><br>
+<div style="background-color:rgb(138,153,178);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(30,23,18);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(70,92,135);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(131,127,121);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(80,74,66);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(155,28,29);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <br><br><br>
 <img src="example_images/04103_misslibertyii_1920x1080.jpg" width="200"><br>
-<div style="background-color:rgb(189,214,217);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(149,183,198);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(102,148,176);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(46,107,136);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(9,63,52);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(180,207,213);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(124,164,187);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(61,118,149);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(12,69,65);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<br><br><br>
+<img src="example_images/07.jpg" width="200"><br>
+<div style="background-color:rgb(87,114,79);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(63,84,49);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(33,46,30);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(132,146,129);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <br><br><br>
 <img src="example_images/14775211410_42b8d244da_o.jpg" width="200"><br>
-<div style="background-color:rgb(238,178,142);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(140,121,133);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(74,72,84);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(34,37,46);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(246,213,178);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(243,192,154);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(44,46,57);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(95,91,100);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(158,131,144);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<br><br><br>
+<img src="example_images/8448152811.jpg" width="200"><br>
+<div style="background-color:rgb(94,85,77);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(123,118,115);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(51,51,53);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(62,73,93);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(14,13,12);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(197,198,199);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <br><br><br>
 <img src="example_images/Bez nazwy.jpg" width="200"><br>
 <div style="background-color:rgb(0,0,0);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <br><br><br>
 <img src="example_images/Fotolia_45549559_320_480.jpg" width="200"><br>
-<div style="background-color:rgb(237,240,249);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(34,36,3);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(113,153,16);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(83,84,21);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(228,216,188);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(219,37,12);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(219,120,69);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(196,183,143);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(232,229,224);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(52,54,7);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(146,159,34);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(201,49,23);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <br><br><br>
 <img src="example_images/british-flag-medium.jpg" width="200"><br>
-<div style="background-color:rgb(254,254,254);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(208,19,43);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(0,35,124);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(207,21,44);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(253,253,253);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(1,35,124);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <br><br><br>
 <img src="example_images/giant-panda-shutterstock_86500690.jpg" width="200"><br>
-<div style="background-color:rgb(105,154,43);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(65,102,34);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(25,38,13);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(210,204,174);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(57,108,21);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(27,37,17);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(100,158,33);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(141,141,101);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(246,239,217);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(201,195,161);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <br><br><br>
 <img src="example_images/mac_os_x_retina_zebras-wallpaper-1920x1080.jpg" width="200"><br>
-<div style="background-color:rgb(36,75,26);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(107,162,36);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(98,125,108);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(170,192,188);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(84,146,27);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(135,182,52);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(64,98,41);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(30,84,18);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(138,165,161);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(91,115,112);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(18,38,24);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(201,216,218);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<br><br><br>
+<img src="example_images/sample1_l.jpg" width="200"><br>
+<div style="background-color:rgb(99,103,104);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(57,64,46);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(105,129,51);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(138,103,161);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(140,146,82);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(208,213,223);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<br><br><br>
+<img src="example_images/sample_0.jpg" width="200"><br>
+<div style="background-color:rgb(49,60,5);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(121,144,42);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(211,189,139);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(221,41,67);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <br><br><br>
 <img src="example_images/windows_xp_bliss-wide.jpg" width="200"><br>
-<div style="background-color:rgb(55,88,10);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(207,232,254);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(55,87,10);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(56,139,253);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(125,171,29);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(168,209,254);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <div style="background-color:rgb(115,176,254);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(126,172,29);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
-<div style="background-color:rgb(49,135,252);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(238,249,254);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <br><br><br>
